AudioNode.connect should return passed destination node https://bugs.webkit.org/show_bug.cgi?id=188834

Patch by Walker Henderson <wjahenderson@gmail.com> on 2018-09-30
Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/webaudio/the-audio-api/the-audionode-interface/audionode-connect-return-value-expected.txt:

Source/WebCore:

No new tests, rebaselined existing test.

* Modules/webaudio/AudioBasicInspectorNode.cpp:
(WebCore::AudioBasicInspectorNode::connect): Deleted.
* Modules/webaudio/AudioBasicInspectorNode.h:
* Modules/webaudio/AudioNode.cpp:
* Modules/webaudio/AudioNode.h:
* Modules/webaudio/AudioNode.idl:

Canonical link: https://commits.webkit.org/205077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236648 268f45cc-cd09-0410-ab3c-d52691b4dbfc